tests/base/invalid/Function_CompileFail_1.whiley
import * from whiley.lang.*

void f(int x):
    asdkljkljg(x)

void ::main(System sys,[string] args):
    f(1)
